Profile picture and language : uz
