# backend/src/main/java/com/researchhub/backend/professor/UpdateProfessorRequest.java
@@ -12,4 +12,10 @@ public class UpdateProfessorRequest {
     private JsonNullable<String> fieldOfStudy = JsonNullable.undefined();
     private JsonNullable<UUID> universityId = JsonNullable.undefined();
     private JsonNullable<String> bio = JsonNullable.undefined();
+    private JsonNullable<String> title = JsonNullable.undefined();
+    private JsonNullable<String> department = JsonNullable.undefined();
+    private JsonNullable<String> officeLocation = JsonNullable.undefined();
+    private JsonNullable<String> phone = JsonNullable.undefined();
+    private JsonNullable<String> websiteUrl = JsonNullable.undefined();
+    private JsonNullable<String> researchInterests = JsonNullable.undefined();
 }
